--- a/src/components/ToolbarItem/Style.css
+++ b/src/components/ToolbarItem/Style.css
@@ -3,6 +3,7 @@
   text-shadow: 1px 0 #e4e4e4;
   color: transparent;
   box-sizing: border-box;
+  direction: rtl;
 }
 
 .toolbar-icon-hover {
@@ -28,7 +29,7 @@
 .toolbar-icon-hover-content > div {
   display: table;
   filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.75));
-
+  direction: ltr;
 }
 
 .toolbar-icon-hover-content > div > * {
@@ -42,7 +43,7 @@
 }
 
 .toolbar-icon-hover-content > div .arrow-container {
-  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .toolbar-icon-hover-content > div .arrow {
@@ -50,8 +51,8 @@
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
+  border-width: 10px 0px 10px 10px;
+  border-color: transparent transparent transparent white;
 }
 
 .red {
