--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -25,4 +26,32 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.cursor-icon {
+  position: absolute;
+  display: table;
+  pointer-events: none;
+}
+
+.eraser {
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.text-cursor {
+  font-size: 50px;
+}
+
+.text-box {
+  border: 1px solid black;
+  width: 200px;
+  height: 50px;
+  position: absolute;
+  background: white;
+  top: 100px;
+  left: 100px;
 }
